@@ -15,6 +15,8 @@
    arguments in usual way. (Simon Kersey)
  * Fixed a bug in the new SyntaxHighlighter used in qannatate and qcat so that
    it correctly handle tokens without styles. (Bug #508281, Gary van der Merwe)
+ * Fixed a bug in TreeWidget were some times duplicated in parent directories.
+   (Gary van der Merwe)
 
 0.17 "Sapin de Noël" - 2009/12/12
 ---------------------------------
